# libstrophe-sys-bindgen

./: .gitignore  Cargo.toml  Makefile  README-header.md  README.md  build.rs
src/: ffi.rs  lib.rs
